# kira2diffeq

./: .gitignore  CMakeLists.txt  MANUAL.aux  MANUAL.md  MANUAL.out  MANUAL.tex  MANUAL.toc  README.md
.github/workflows/: ci.yml
benchmarks/: box_1loop_de.m  report-20260512-1025.txt  report-20260512-1051.txt  report-20260512-1239.txt  sunrise_de.m  topo7_massless_de.m
include/kira2diffeq/: config_reader.h  differentiator.h  exporter.h  math_parser.h  reducer.h
src/: config_reader.cpp  differentiator.cpp  exporter.cpp  main.cpp  math_parser.cpp  reducer.cpp
test_fctopology100C/: jobs.yaml  jobs_test.yaml
test_fctopology100C/config/: integralfamilies.yaml  integralfamilies.yaml.bak  integralfamilies_test.yaml  kinematics_test.yaml
test_fctopology100C/results/topo7/: masters.final
test_fctopology100C/sectormappings/: auxiliary.yaml  topology_ordering  variables
test_fctopology100C/sectormappings/test/: IBP  canonica  nonTrivialSector  relations  relations.frm  sectorRelations  sectorSymmetries  symmetries  symmetries.frm  trivialsector
test_fctopology100C/sectormappings/topo7/: IBP  LI  canonica  nonTrivialSector  relations  relations.frm  sectorRelations  sectorSymmetries  symmetries  symmetries.frm  trivialsector
test_fctopology100C/tmp/test/: masters
tests/: CMakeLists.txt  test_sunrise.cpp
tests/fixtures/cli_smoke/: integralfamilies.yaml  kinematics.yaml  masters.final  reduction.m
